# jlink_mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  HARDWARE_TEST.md  LICENSE  MANIFEST.in  README.md  jlink_mcp_requirements.txt  pyproject.toml  pytest.ini  requirements-uv.txt  test_device_matching.py  test_fc7300.py
.github/workflows/: python-publish.yml
.iflow/: settings.json
docs/: ARCHITECTURE.md  INSTALL_GUIDE.md
docs/guides/: hardware-test.md  iflow-mcp-setup.md  quickstart.md  release.md  uv-guide.md
docs/project/: changelog.md  iflow.md
docs/reference/: api.md  examples.md  faq.md
src/jlink_mcp/: __init__.py  __main__.py  config_manager.py  device_patch_interface.py  device_patch_manager.py  embedding_manager.py  exceptions.py  gdb_server.py  jlink_manager.py  semantic_registry.py  server.py  svd_manager.py  utils.py
src/jlink_mcp/models/: __init__.py  base.py  device.py  operations.py  semantic.py  svd.py
src/jlink_mcp/plugins/: __init__.py  flagchip_patch.py
src/jlink_mcp/resources/JLink_Patch_v2.45/Devices/Flagchip/FC7300/: FC7300F8MDQxXxxxT1B_DFlash_FlexCore.elf  FC7300F8MDQxXxxxT1B_NVR_FlexCore.elf  FC7300F8MDQxXxxxT1B_PFlash_FlexCore.elf
src/jlink_mcp/tools/: __init__.py  configuration.py  connection.py  debug.py  device_info.py  flash.py  guidance.py  memory.py  rtt.py  semantic.py  svd.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_device_matching.py  test_fc7300.py  test_semantic_integration.py
tests/mock/: test_tools.py
tests/performance/: __init__.py  test_performance.py  test_semantic_evaluation.py  test_semantic_performance.py
tests/unit/: test_debug_connection_behavior.py  test_models.py  test_semantic.py  test_svd_parser.py
